--- a/src/css/shared.css
+++ b/src/css/shared.css
@@ -1,8 +1,14 @@
 /* --------------------GENERAL STYLE-------------------- */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
 }
 
 /* --------------------FONT STYLE-------------------- */
