--- a/src/css_tanya/style.css
+++ b/src/css_tanya/style.css
@@ -5,9 +5,9 @@
     flex-direction: column;
     min-height: 100vh;
     /* justify-content: center; */
-    align-items: flex-start;
+    align-items: center;
     box-sizing: border-box;
-    margin-left: 3rem;
+    /* margin-left: 3rem; */
     width: 100%;
     display: flex;
 }
@@ -52,4 +52,20 @@
 
 .row-t>.edit-btn-bigger {
     margin-right: 2rem;
+}
+
+
+/* ____________________user profile details___________________ */
+
+.user-details-container-t {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+
+.email {
+    color: white;
+    font-size: 1.6rem;
 }
