--- a/src/css_tanya/style.css
+++ b/src/css_tanya/style.css
@@ -4,8 +4,7 @@
 
     flex-direction: column;
     min-height: 100vh;
-    /* justify-content: center; */
-    align-items: center;
+
     box-sizing: border-box;
     /* margin-left: 3rem; */
     width: 100%;
@@ -27,6 +26,7 @@
 
 .row-t {
     display: flex;
+    flex-direction: row;
 }
 
 .make-big-title-t {
@@ -46,7 +46,7 @@
 
 .buttons-container-t {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin-bottom: 3rem;
 }
 
@@ -56,11 +56,18 @@
 
 
 /* ____________________user profile details___________________ */
+.user-content-t {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
 
 .user-details-container-t {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 2rem;
 
 }
 
@@ -68,4 +75,97 @@
 .email {
     color: white;
     font-size: 1.6rem;
+    margin-bottom: 3rem;
+
+
+}
+
+.user-image-wrapper-t {
+    margin-bottom: 2rem;
+}
+
+.user-image-wrapper-t>img {
+    max-width: 100%;
+    width: 120px;
+    border-radius: 120px;
+}
+
+.selling-vehicles-title {
+    color: #b42f47;
+    margin-bottom: 3rem;
+
+}
+
+
+.small-image-car-wrapper>img {
+    max-width: 100%;
+    width: 100px;
+    margin-right: 2rem;
+}
+
+.edit-profile-btn {
+    width: 16.4rem;
+    font-size: 1.6rem;
+    background-color: #464b59;
+    border-radius: 1rem;
+    margin-bottom: 2.8rem;
+}
+
+
+.delete-btn-small-t {
+    width: 10rem;
+    border-radius: 1rem;
+    font-size: 1.3rem;
+    background-color: #1d1f2b;
+    border: 1.5px solid #d92546;
+    padding: 0.4rem;
+    color: #d92546;
+}
+
+.edit-btn-small-t {
+    width: 10rem;
+    border-radius: 1rem;
+    font-size: 1.3rem;
+    background-color: #464b59;
+    padding: 0.4rem;
+    margin-bottom: 3.5rem;
+}
+
+
+
+
+
+.selling-vehicles-container {
+    margin-left: 4rem;
+}
+
+/* ____________________sell carr form___________________ */
+
+.main-content-t>form {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    color: white;
+    font-weight: 900;
+}
+
+form {
+    background-color: #1d1f2b;
+}
+
+
+::placeholder {
+    color: white;
+    opacity: 1;
+}
+
+.card-body {
+    background-color: #1d1f2b;
+}
+
+
+.main-content-t.vehicle-details-title {
+    margin-left: 5%;
 }
