--- a/src/css_tanya/style.css
+++ b/src/css_tanya/style.css
@@ -1,3 +1,8 @@
+textarea {
+    background-color: #1d1f2b;
+}
+
+/* ___general styling____ */
 .main-content-t {
 
     display: flex;
@@ -13,12 +18,13 @@
 
 
 
-/* ____________________sell car form___________________ */
 
-.choose-file-label {
-    color: aliceblue;
+.row-t {
+    display: flex;
+    flex-direction: row;
 }
 
+/* ___general styling finished____ */
 
 
 /* ____________________sell car details___________________ */
@@ -28,13 +34,11 @@
     align-items: center;
 }
 
-.row-t {
-    display: flex;
-    flex-direction: row;
-}
 
 .my-car-image-wrapper-t {
     margin-bottom: 2rem;
+    background-color: #fffffc;
+    border-radius: 1rem;
 }
 
 .my-car-image-wrapper-t>img {
@@ -113,132 +117,14 @@
 }
 
 
-/* ____________________user profile details___________________ */
-.user-content-t {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 
-}
-
-.user-details-container-t {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 2rem;
-
-}
-
-
-.email {
-    color: white;
-    font-size: 1.6rem;
-    margin-bottom: 3rem;
-
-
-}
-
-.user-image-wrapper-t {
-    margin-bottom: 2rem;
-    margin-top: 3rem;
-
-}
-
-.user-image-wrapper-t>img {
-    max-width: 100%;
-    width: 120px;
-    border-radius: 120px;
-}
-
-.selling-vehicles-title {
-    color: #b42f47;
-    margin-bottom: 3rem;
-
-}
-
-
-.small-image-car-wrapper>img {
-    max-width: 100%;
-    width: 100px;
-    margin-right: 2rem;
-}
-
-.edit-profile-btn {
-    width: 16.4rem;
-    font-size: 1.6rem;
-    background-color: #464b59;
-    border-radius: 1rem;
-    margin-bottom: 2.8rem;
-}
-
-
-.delete-btn-small-t {
-    width: 10rem;
-    border-radius: 1rem;
-    font-size: 1.3rem;
-    background-color: #1d1f2b;
-    border: 1.5px solid #d92546;
-    padding: 0.4rem;
-    color: #d92546;
-}
-
-.edit-btn-small-t {
-    width: 10rem;
-    border-radius: 1rem;
-    font-size: 1.3rem;
-    background-color: #464b59;
-    padding: 0.4rem;
-    margin-bottom: 3.5rem;
-}
-
-.small-buttons-container-t {
-    display: flex;
-
-    flex-direction: row;
-    /* margin-bottom: 3rem; */
-}
-
-
-
-.selling-vehicles-container {
-    margin-left: 4rem;
-}
-
-
-
-
-/* ____________________sell carr form___________________ */
-
-.main-content-t>form {
-    display: flex;
-    flex-direction: column;
-}
-
-label {
-    color: white;
-    font-weight: 900;
-}
-
+/* _____reeplace to shared_______ */
 form {
     background-color: #1d1f2b;
 }
 
 
 ::placeholder {
-    color: white;
+    color: #fffffc;
     opacity: 1;
-}
-
-.card-body {
-    background-color: #1d1f2b;
-}
-
-
-.main-content-t .vehicle-details-title {
-    margin-left: 5%;
-}
-
-
-.view-details-btn-t {
-    color: #d92546;
 }
