--- a/src/css_ella/home.css
+++ b/src/css_ella/home.css
@@ -1,9 +1,10 @@
 .car-card {
   background-color: #fffffc;
   width: 32.3rem;
-  margin: 3rem auto;
+  margin: 2rem auto;
   display: flex;
   align-items: center;
+  border-radius: 1rem;
 }
 
 .card-text-container {
