--- a/src/css_tanya/search.css
+++ b/src/css_tanya/search.css
@@ -13,3 +13,62 @@ form .search-btn {
     opacity: 100;
     padding-left: 1.5rem;
 }
+
+.main-redline-input>input {
+    background-color: #1d1f2b;
+}
+
+/* ____________select style_______________ */
+.select-t {
+    width: 240px;
+    background-color: #1d1f2b;
+
+}
+
+.dropdown>button {
+    background-color: #1d1f2b;
+    width: 240px;
+    border: none;
+    font-size: 1.6rem;
+}
+
+
+.dropdown-toggle::after {
+    display: inline-block;
+    margin-left: 10.4em;
+    vertical-align: 0.255em;
+    content: "";
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-bottom: 0;
+    border-left: 0.3em solid transparent;
+    /* font-size: 2.3rem; */
+}
+
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    width: 85%;
+}
+
+.dropdown-item {
+    color: white;
+    font-size: 1.4rem;
+}
+
+
+.dropdown-header {
+    color: white;
+    font-size: 1.4rem;
+}
+
+.btn-secondary:not(:disabled):not(.disabled):active,
+.btn-secondary:not(:disabled):not(.disabled).active,
+.show>.btn-secondary.dropdown-toggle {
+    color: #fff;
+    background-color: #1d1f2b;
+    border-color: #1d1f2b;
+}
