--- a/src/css_ella/view_car_details.css
+++ b/src/css_ella/view_car_details.css
@@ -1,7 +1,7 @@
-.view-cardetails-container img {
+.view-cardetails-container-e img {
   width: 25rem;
 }
 
-.submit-btn {
+.submit-btn-e {
   background-color: #d92546;
 }
