--- a/src/css_ella/home.css
+++ b/src/css_ella/home.css
@@ -1,4 +1,4 @@
-.car-card {
+.car-card-e {
   background-color: #fffffc;
   width: 32.3rem;
   margin: 2rem auto;
@@ -7,7 +7,7 @@
   border-radius: 1rem;
 }
 
-.card-text-container {
+.card-text-container-e {
   margin-left: 2rem;
   width: 100%;
   display: flex;
@@ -15,13 +15,13 @@
   align-items: flex-start;
 }
 
-.card-text-container hr {
+.card-text-container-e hr {
   width: 13.3rem;
   margin: 0;
   margin-bottom: 1rem;
 }
 
-.odometer-year-container {
+.odometer-year-container-e {
   font-weight: 600;
   font-style: italic;
   font-size: 0.9rem;
@@ -30,6 +30,6 @@
   justify-content: space-between;
 }
 
-.car-card img {
+.car-card-e img {
   width: 14.6rem;
 }
