--- a/src/css_ella/home.css
+++ b/src/css_ella/home.css
@@ -1,7 +1,7 @@
 .car-card-e {
   background-color: #fffffc;
   width: 32.3rem;
-  margin: 2rem auto;
+  margin: 0 auto 2rem;
   display: flex;
   align-items: center;
   border-radius: 1rem;
