--- a/src/css_ella/view_car_details.css
+++ b/src/css_ella/view_car_details.css
@@ -2,6 +2,22 @@
   width: 25rem;
 }
 
+.view-cardetails-container-e {
+  /* margin: 2rem; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.view-cardetails-container-e > div {
+  width: 100%;
+}
+
 .submit-btn-e {
   background-color: #d92546;
+}
+
+.comment-container-e {
+  display: flex;
+  align-items: center;
 }
