--- a/src/css_tanya/my_profile.css
+++ b/src/css_tanya/my_profile.css
@@ -1,7 +1,7 @@
 .column-t {
   display: flex;
   flex-direction: column;
-  color: white;
+  color: #fffffc;
 }
 
 .user-content-t {
@@ -18,7 +18,7 @@
 }
 
 .email {
-  color: white;
+  color: #fffffc;
   font-size: 1.6rem;
   margin-bottom: 3rem;
 }
