--- a/src/css_tanya/addcar_form.css
+++ b/src/css_tanya/addcar_form.css
@@ -54,3 +54,12 @@ form>.red-btn-t {
 input#carimage {
     color: white;
 }
+
+/* .year-container-t button.dropdown-toggle.btn.btn-secondry .dropdown-toggle::after {
+    margin-left: 13.4em !important;
+}
+
+*/
+.year-container-t .dropdown-toggle::after {
+    margin-left: 11em !important;
+}
