--- a/src/css_tanya/search.css
+++ b/src/css_tanya/search.css
@@ -45,13 +45,15 @@ form .search-btn-t {
     /* font-size: 2.3rem; */
 }
 
-.container {
+.container-t {
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
     width: 85%;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
 }
 
 .dropdown-item {
