--- a/src/css_ella/home.css
+++ b/src/css_ella/home.css
@@ -8,7 +8,7 @@
 }
 
 .card-text-container-e {
-  margin-left: 2rem;
+  margin: 1.5rem 0 1.5rem 1rem;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -19,9 +19,11 @@
   width: 13.3rem;
   margin: 0;
   margin-bottom: 1rem;
+  border: #b42f47 solid 1.5px;
 }
 
 .odometer-year-container-e {
+  margin-bottom: 2.6em;
   font-weight: 600;
   font-style: italic;
   font-size: 0.9rem;
@@ -32,4 +34,14 @@
 
 .car-card-e img {
   width: 14.6rem;
+  margin-left: 0.6rem;
+}
+
+.gray-text-e {
+  color: #a0a0a0;
+}
+
+.price-btn {
+  display: flex;
+  align-items: flex-start;
 }
