--- a/src/css_ella/view_car_details.css
+++ b/src/css_ella/view_car_details.css
@@ -1,23 +1,66 @@
-.view-cardetails-container-e img {
+.car-img-container-e img {
+  width: 20rem;
+}
+
+.car-img-container-e {
+  padding: 1rem;
+  margin: 0 auto;
+  background-color: #f0f0f0;
   width: 25rem;
+  text-align: center;
+  border-radius: 0.5rem;
 }
 
-.view-cardetails-container-e {
-  /* margin: 2rem; */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.view-cardetails-container-e > div {
-  width: 100%;
+.viewdeatils-container-e {
+  height: 100vh;
 }
 
 .submit-btn-e {
   background-color: #d92546;
+  width: 7.3rem;
+  height: 7.5rem;
+  border-radius: 1rem;
+  font-size: 1.4rem;
+}
+
+.comment-container-e textarea {
+  border: 2px solid #b42f47;
+  border-radius: 0.5rem;
+  padding: 0.8rem;
+  color: #d4d4c2;
+  font-size: 1.2rem;
+}
+
+.comment-container-e textarea::placeholder {
+  font-size: 1.2rem;
 }
 
 .comment-container-e {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin-top: 1.2rem;
+}
+
+.view-cardetails-text-e {
+  display: flex;
+  align-items: flex-end;
+  margin: 2.2rem 0 1.3rem;
+}
+
+.deatils-text-container-e {
+  width: 83%;
+  margin: 0 auto;
+}
+
+.showing-comment-container-e {
+  width: 83%;
+  margin: 0 auto;
+}
+
+.showing-comment-e {
+  color: #fffffc;
+  border-bottom: 1px solid #b42f47;
+  padding: 1.4rem 0;
+  font-size: 1.4rem;
 }
